# pcloud-sdk-python

./: .gitignore  .pcloud_credentials  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  run_tests.py  setup.py  tox.ini  verify_tests.py
.github/: mlc_config.json
.github/workflows/: docs.yml  python-publish.yml  release.yml  tests.yml
docs/: API_REFERENCE.md  AUTHENTICATION.md  DEV.md  EXAMPLES.md  INSTALLATION.md  PROGRESS_CALLBACKS.md  TROUBLESHOOTING.md  index.md
examples/: .pcloud_credentials  .pcloud_demo_credentials  basic_usage.py  complete_demo.py  multi_account_management.py  oauth2_example.py  progress_examples.py  token_management.py  upload_download_demo.py
pcloud_sdk/: __init__.py  account.py  account_manager.py  app.py  cli.py  core.py  exceptions.py  file_operations.py  folder_operations.py  progress_utils.py  request.py  response.py  user_operations.py
requirements/: dev.txt  test.txt
tests/: test_account.py  test_account_manager.py  test_authentication.py  test_config.py  test_file_operations.py  test_folder_operations.py  test_integration.py  test_pcloud_sdk_multi_account.py  test_progress_callbacks.py  test_token_manager.py  test_user_operations.py
tools/: benchmark.py  lint.py  release.py  test_runner.py
